fix modal overflow

--- a/styles.css
+++ b/styles.css
@@ -607,7 +607,6 @@ body {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  overflow: hidden;
 }
 
 /* Modal Content/Box */
@@ -620,7 +619,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  overflow: hidden;
 }
 
 .instructions h2 {
